[project]
name = "smithy_changelog"
version = "0.1.0"
description = "A staged changelog tool for Smithy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
amend = "smithy_changelog.amend:main"
render = "smithy_changelog.render:main"
new-change = "smithy_changelog.new:main"

[dependency-groups]
lint = [
    "ruff>=0.12.3",
    "docformatter>=1.7.7",
]
typing = [
    "pyright>=1.1.403"
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv]
package = true
required-version = ">=0.7.21"
default-groups = ["lint", "typing"]

[tool.pyright]
typeCheckingMode = "strict"

[tool.docformatter]
recursive = true
black = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [ "ASYNC", "C4", "E1", "E4", "E7", "E9", "F", "FURB", "G", "I", "LOG", "PIE", "RUF", "S", "T", "UP" ]
ignore = [ "T201", "S602", "S324", "S310" ]

[tool.ruff.format]
docstring-code-format = true

