[build-system]
requires = ["uv_build >= 0.11.6, < 0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project]
name = "smithy"
version = "1.0.0"
dependencies = [
    "sphinx==9.1.0",
    "pygments==2.20.0",
    "furo==2025.12.19",

    # Used by new docs
    "sphinx-inline-tabs==2025.12.21.14",
    "Sphinx-Substitution-Extensions==2026.1.12",

    "sphinx_copybutton==0.5.2",
    "sphinx-autobuild==2025.8.25",

    # needs to be added as it is removed in python3.13
    "standard-imghdr==3.13.0",

    # Allows writing docs in markdown
    "myst-parser==5.0.0"
]

[project.entry-points."pygments.lexers"]
smithy = "smithy.lexer:SmithyLexer"
